# psead

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: PSEADAttention.py  ppi_test.py
listings/: listing1.py  listing2.py  listing3.py
src/: attention.py
src/psead/: __init__.py  attention.py  groups.py
