[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psead" 
version = "0.1.0" # This should match __version__ in src/psead/__init__.py
authors = [
  { name="Daniel Ayomide Olanrewaju", email="" }, 
]
description = "A Group-Theoretic Framework for Equivariant Transformers in Biological Systems"
readme = "README.md"
requires-python = ">=3.8" # Minimum Python version required
keywords = ["symmetry", "equivariant", "transformer", "attention", "biology", "machine learning", "group theory"]
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Or your chosen license
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha", # Choose appropriate status
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "torch>=1.8.0", # Specify your dependencies with version constraints
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/psead" # Replace with your project's GitHub URL
"Bug Tracker" = "https://github.com/yourusername/psead/issues" # Replace with your issue tracker URL

[tool.setuptools.packages.find]
where = ["src"] # Tell setuptools to look for packages in the 'src' directory
