[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psead" 
version = "0.1.0" # This should match __version__ in src/psead/__init__.py
authors = [
  { name="Daniel Ayomide Olanrewaju", email="lanredaniel377@gmail.com" }, 
]
description = "A Group-Theoretic Framework for Equivariant Transformers in Biological Systems"
readme = "README.md"
requires-python = ">=3.8" 
keywords = ["symmetry", "equivariant", "transformer", "attention", "biology", "machine learning", "group theory"]
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha", 
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "torch>=1.8.0", 
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/danielayomide-git/psead" 
"Bug Tracker" = "https://github.com/danielayomide-git/psead/issues" 

[tool.setuptools.packages.find]
where = ["src"] 
